v0.2.5 CSS: explorer button alignment and mobile searchbar resizing fix

--- a/src/app/components-shared/crypto/crypto-search/crypto-searchbar.component.scss
+++ b/src/app/components-shared/crypto/crypto-search/crypto-searchbar.component.scss
@@ -2,3 +2,13 @@
   font-size: small;
   float: right;
 }
+
+.search-formfield {
+  max-width: 180px;
+}
+
+@media only screen and (max-width: 600px)  {
+  .search-formfield {
+    max-width:120px
+  }
+}
